fix(map): Fix map iframe being slightly too large and covering border image

--- a/app/components/Homepage/_Homepage.sass
+++ b/app/components/Homepage/_Homepage.sass
@@ -1,5 +1,10 @@
 .map-frame
     background-color: transparent
-    border: 0 none transparent
-    padding: 0
+    border: 0
+    padding: 1
+    overflow: hidden
+
+.homepage
+    width: 100%
+    height: 100%
     overflow: hidden
